cmake_minimum_required(VERSION 3.24)

set(CMAKE_CXX_STANDARD 14)
PROJECT(AlgorithmPractice)
add_subdirectory(04-02)
add_subdirectory(04-03)
add_subdirectory(04-04)
add_subdirectory(04-05)
add_subdirectory(04-06)
add_subdirectory(04-07)
add_subdirectory(04-08)
add_subdirectory(04-09)
add_subdirectory(04-10)
add_subdirectory(04-11)
add_subdirectory(04-12)
add_subdirectory(04-13)
add_subdirectory(04-14)
add_subdirectory(04-18)
