cmake_minimum_required(VERSION 3.24)

SET(CMAKE_CXX_STANDARD 14)
PROJECT(04-14)

ADD_EXECUTABLE(leetcode_216 leetcode_216.cpp)
ADD_EXECUTABLE(leetcode_105 leetcode_105.cpp)
ADD_EXECUTABLE(leetcode_590 leetcode_590.cpp)
ADD_EXECUTABLE(luogu_P1387 luogu_P1387.cpp)
ADD_EXECUTABLE(luogu_P1396 luogu_P1396.cpp)