cmake_minimum_required(VERSION 3.24)

SET(CMAKE_CXX_STANDARD 17)
PROJECT(04-29)


ADD_EXECUTABLE(leetcode_1329 leetcode_1329.cpp)
ADD_EXECUTABLE(leetcode_3 leetcode_3.cpp)
ADD_EXECUTABLE(leetcode_5 leetcode_5.cpp)
ADD_EXECUTABLE(leetcode_6 leetcode_6.cpp)
ADD_EXECUTABLE(leetcode_8 leetcode_8.cpp)
ADD_EXECUTABLE(leetcode_10 leetcode_10.cpp)