cmake_minimum_required(VERSION 3.24)

SET(CMAKE_CXX_STANDARD 17)
PROJECT(04-29)


ADD_EXECUTABLE(leetcode_43 leetcode_43.cpp)
ADD_EXECUTABLE(leetcode_54 leetcode_54.cpp)
ADD_EXECUTABLE(leetcode_2798 leetcode_2798.cpp)
ADD_EXECUTABLE(leetcode_67 leetcode_67.cpp)
ADD_EXECUTABLE(leetcode_1329_ftc leetcode_1329_ftc.cpp)