cmake_minimum_required(VERSION 3.24)

SET(CMAKE_CXX_STANDARD 17)
PROJECT(05-07)


ADD_EXECUTABLE(leetcode_106 leetcode_106.cpp)
ADD_EXECUTABLE(leetcode_508 leetcode_508.cpp)
ADD_EXECUTABLE(leetcode_652 leetcode_652.cpp)
ADD_EXECUTABLE(leetcode_1123 leetcode_1123.cpp)
ADD_EXECUTABLE(leetcode_194 leetcode_194.cpp)